fixed text-align for title

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -5,6 +5,7 @@
   &__title {
     display: flex;
     justify-content: center;
+    text-align: center;
   }
   &__paragraf {
     margin-bottom: 1em;
